Ajout d'une transition des cellules

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ main {
     width: 10px;
     height: 10px;
     background-color: green;
+    transition: background-color 0.5s ease-in-out;
 }
 
 .burning {
