--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,13 @@ button:hover {
 #stop-button {
     margin-top: 10px;
 }
+
+#start-button.running {
+    background-color: green;
+    cursor: not-allowed;
+}
+
+#stop-button.stopped {
+    background-color: gray;
+    cursor: not-allowed;
+}
